--- a/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
+++ b/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
@@ -423,6 +423,14 @@ rgba
 2
 )
 ;
+height
+:
+17
+;
+width
+:
+17
+;
 }
 .
 favicon
@@ -439,36 +447,6 @@ width
 height
 :
 16px
-;
-}
-.
-lessVisible
-{
-background
--
-color
-:
-rgba
-(
-245
-245
-245
-.
-2
-)
-;
--
-moz
--
-box
--
-shadow
-:
-none
-;
-border
-:
-none
 ;
 }
 .
