--- a/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
+++ b/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
@@ -423,14 +423,6 @@ rgba
 2
 )
 ;
-height
-:
-17
-;
-width
-:
-17
-;
 }
 .
 favicon
@@ -447,6 +439,36 @@ width
 height
 :
 16px
+;
+}
+.
+lessVisible
+{
+background
+-
+color
+:
+rgba
+(
+245
+245
+245
+.
+2
+)
+;
+-
+moz
+-
+box
+-
+shadow
+:
+none
+;
+border
+:
+none
 ;
 }
 .
@@ -476,12 +498,15 @@ background
 :
 url
 (
-.
-.
+chrome
+:
 /
-img
 /
-app
+global
+/
+skin
+/
+icons
 /
 closetab
 .
@@ -541,14 +566,17 @@ background
 :
 url
 (
-.
-.
+chrome
+:
 /
-img
 /
-app
+global
 /
-expand
+skin
+/
+icons
+/
+resizer
 .
 png
 )
@@ -1119,8 +1147,6 @@ url
 /
 img
 /
-app
-/
 new
 -
 tab
@@ -1559,8 +1585,6 @@ url
 /
 img
 /
-app
-/
 edit
 -
 light
@@ -1762,14 +1786,17 @@ image
 :
 url
 (
-.
-.
+chrome
+:
 /
-img
 /
-app
+global
 /
-expand
+skin
+/
+icons
+/
+resizer
 .
 png
 )
