+ Cleaned up inelegant box shadows per fryn's suggestion + Made the snap guides a little more subtle
UltraBlame original commit: d7af956bbbf7e7d23025955a8ecc09d1d3826450

--- a/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
+++ b/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
@@ -174,50 +174,9 @@ rgba
 6
 )
 0
-2px
-0px
-inset
-rgba
-(
-255
-255
-255
 0
-.
-6
-)
 0
--
 2px
-0px
-inset
-rgba
-(
-255
-255
-255
-0
-.
-6
-)
-2px
-0px
-0px
-inset
-rgba
-(
-255
-255
-255
-0
-.
-6
-)
--
-2px
-0px
-0px
-;
 cursor
 :
 pointer
@@ -845,52 +804,7 @@ box
 -
 shadow
 :
-inset
-rgba
-(
-255
-255
-255
-0
-)
-0
-2px
-0px
-inset
-rgba
-(
-255
-255
-255
-0
-)
-0
--
-2px
-0px
-inset
-rgba
-(
-255
-255
-255
-0
-)
-2px
-0px
-0px
-inset
-rgba
-(
-255
-255
-255
-0
-)
--
-2px
-0px
-0px
+none
 !
 important
 ;
@@ -959,49 +873,9 @@ rgba
 6
 )
 0
-2px
-0px
-inset
-rgba
-(
-255
-255
-255
 0
-.
-6
-)
 0
--
 2px
-0px
-inset
-rgba
-(
-255
-255
-255
-0
-.
-6
-)
-2px
-0px
-0px
-inset
-rgba
-(
-255
-255
-255
-0
-.
-6
-)
--
-2px
-0px
-0px
 rgba
 (
 0
@@ -1112,7 +986,7 @@ border
 -
 top
 :
-5px
+2px
 dashed
 rgba
 (
@@ -1121,14 +995,14 @@ rgba
 0
 0
 .
-3
+15
 )
 ;
 border
 -
 left
 :
-5px
+2px
 dashed
 rgba
 (
@@ -1137,7 +1011,7 @@ rgba
 0
 0
 .
-3
+15
 )
 ;
 }
