Bug 574188 - Add UI hooks to trigger tab candy
UltraBlame original commit: 700bdb4697790e9df7e99143f64a98b3831c9e51

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -239,23 +239,6 @@ opacity
 8
 ;
 }
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-false
-"
-]
->
-.
-tabbrowser
--
-arrowscrollbox
->
 .
 tabs
 -
@@ -301,23 +284,219 @@ background
 none
 ;
 }
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-false
-"
-]
->
 .
 tabbrowser
 -
-arrowscrollbox
->
+tab
+:
+-
+moz
+-
+lwtheme
+-
+brighttext
+{
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+1
+)
+rgba
+(
+255
+255
+255
+.
+6
+)
+rgba
+(
+255
+255
+255
+.
+2
+)
+;
+-
+moz
+-
+border
+-
+bottom
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+1
+)
+rgba
+(
+255
+255
+255
+.
+6
+)
+rgba
+(
+255
+255
+255
+.
+2
+)
+;
+-
+moz
+-
+border
+-
+right
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+1
+)
+rgba
+(
+255
+255
+255
+.
+6
+)
+rgba
+(
+255
+255
+255
+.
+2
+)
+;
+}
+.
+tabbrowser
+-
+tab
+:
+-
+moz
+-
+lwtheme
+-
+brighttext
+[
+selected
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+6
+)
+rgba
+(
+255
+255
+255
+.
+2
+)
+;
+-
+moz
+-
+border
+-
+bottom
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+6
+)
+rgba
+(
+255
+255
+255
+.
+2
+)
+;
+-
+moz
+-
+border
+-
+right
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+6
+)
+rgba
+(
+255
+255
+255
+.
+2
+)
+;
+}
 .
 tabs
 -
@@ -333,13 +512,6 @@ lwtheme
 darktext
 #
 TabsToolbar
-[
-tabsontop
-=
-"
-false
-"
-]
 >
 toolbarbutton
 :
@@ -351,13 +523,6 @@ lwtheme
 darktext
 #
 TabsToolbar
-[
-tabsontop
-=
-"
-false
-"
-]
 >
 toolbarpaletteitem
 >
@@ -370,47 +535,6 @@ lwtheme
 -
 darktext
 #
-TabsToolbar
-[
-tabsontop
-=
-"
-false
-"
-]
->
-#
-bookmarks
--
-menu
--
-button
--
-container
->
-#
-bookmarks
--
-menu
--
-button
-:
--
-moz
--
-lwtheme
--
-darktext
-#
-TabsToolbar
-[
-tabsontop
-=
-"
-false
-"
-]
-#
 tabs
 -
 closebutton
@@ -421,27 +545,26 @@ moz
 lwtheme
 -
 darktext
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-false
-"
-]
->
 .
 tabbrowser
 -
 arrowscrollbox
+:
+-
+moz
+-
+lwtheme
+-
+darktext
 >
 .
 scrollbutton
 -
 up
+.
+tabbrowser
+-
+arrowscrollbox
 :
 -
 moz
@@ -449,46 +572,11 @@ moz
 lwtheme
 -
 darktext
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-false
-"
-]
->
-.
-tabbrowser
--
-arrowscrollbox
 >
 .
 scrollbutton
 -
 down
-:
--
-moz
--
-lwtheme
--
-darktext
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-false
-"
-]
->
 .
 tabbrowser
 -
@@ -533,23 +621,6 @@ rgba
 )
 ;
 }
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-false
-"
-]
->
-.
-tabbrowser
--
-arrowscrollbox
->
 .
 tabs
 -
@@ -565,13 +636,6 @@ lwtheme
 brighttext
 #
 TabsToolbar
-[
-tabsontop
-=
-"
-false
-"
-]
 >
 toolbarbutton
 :
@@ -583,13 +647,6 @@ lwtheme
 brighttext
 #
 TabsToolbar
-[
-tabsontop
-=
-"
-false
-"
-]
 >
 toolbarpaletteitem
 >
@@ -602,47 +659,6 @@ lwtheme
 -
 brighttext
 #
-TabsToolbar
-[
-tabsontop
-=
-"
-false
-"
-]
->
-#
-bookmarks
--
-menu
--
-button
--
-container
->
-#
-bookmarks
--
-menu
--
-button
-:
--
-moz
--
-lwtheme
--
-brighttext
-#
-TabsToolbar
-[
-tabsontop
-=
-"
-false
-"
-]
-#
 tabs
 -
 closebutton
@@ -653,27 +669,26 @@ moz
 lwtheme
 -
 brighttext
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-false
-"
-]
->
 .
 tabbrowser
 -
 arrowscrollbox
+:
+-
+moz
+-
+lwtheme
+-
+brighttext
 >
 .
 scrollbutton
 -
 up
+.
+tabbrowser
+-
+arrowscrollbox
 :
 -
 moz
@@ -681,46 +696,11 @@ moz
 lwtheme
 -
 brighttext
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-false
-"
-]
->
-.
-tabbrowser
--
-arrowscrollbox
 >
 .
 scrollbutton
 -
 down
-:
--
-moz
--
-lwtheme
--
-brighttext
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-false
-"
-]
->
 .
 tabbrowser
 -
@@ -870,43 +850,6 @@ padding
 }
 #
 PersonalToolbar
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
-#
-navigator
--
-toolbox
-[
-tabsontop
-=
-"
-true
-"
-]
->
-toolbar
-:
-not
-(
-#
-TabsToolbar
-)
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
 {
 -
 moz
@@ -951,53 +894,15 @@ rgba
 57
 )
 ;
+min
+-
+height
+:
+22px
+;
 }
 #
 PersonalToolbar
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
-:
--
-moz
--
-window
--
-inactive
-#
-navigator
--
-toolbox
-[
-tabsontop
-=
-"
-true
-"
-]
->
-toolbar
-:
-not
-(
-#
-TabsToolbar
-)
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
 :
 -
 moz
@@ -1037,139 +942,18 @@ rgba
 ;
 }
 #
-navigator
--
-toolbox
-[
-tabsontop
-=
-"
-true
-"
-]
->
-#
-nav
--
-bar
-#
-navigator
--
-toolbox
-[
-tabsontop
-=
-"
-true
-"
-]
-:
-not
-(
-[
-customizing
-]
-)
->
-#
-nav
--
-bar
-[
-collapsed
-=
-"
-true
-"
-]
-+
-toolbar
-#
-navigator
--
-toolbox
-[
-tabsontop
-=
-"
-true
-"
-]
-:
-not
-(
-[
-customizing
-]
-)
->
-#
-nav
--
-bar
-[
-collapsed
-=
-"
-true
-"
-]
-+
-#
-customToolbars
-+
-#
-PersonalToolbar
-{
-padding
--
-top
-:
-4px
-!
-important
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-rgba
-(
-255
-255
-255
-.
-58
-)
-rgba
-(
-255
-255
-255
-0
-)
-)
-!
-important
-;
-}
-#
 personal
 -
 bookmarks
 {
-min
 -
-height
+moz
+-
+box
+-
+align
 :
-17px
+center
 ;
 }
 toolbarbutton
@@ -1298,6 +1082,10 @@ margin
 0
 0
 1px
+;
+height
+:
+16px
 ;
 }
 .
@@ -1627,21 +1415,110 @@ start
 bookmark
 -
 item
+[
+livemark
+]
 >
 .
 toolbarbutton
 -
-icon
-{
-width
-:
-16px
-;
-min
+menu
 -
-height
+dropmarker
+{
+list
+-
+style
+-
+image
 :
-16px
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+livemarkFolder
+.
+png
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+9px
+10px
+0
+)
+;
+}
+.
+bookmark
+-
+item
+[
+livemark
+]
+:
+hover
+>
+.
+toolbarbutton
+-
+menu
+-
+dropmarker
+.
+bookmark
+-
+item
+[
+livemark
+]
+[
+open
+=
+"
+true
+"
+]
+>
+.
+toolbarbutton
+-
+menu
+-
+dropmarker
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+18px
+10px
+9px
+)
 ;
 }
 .
@@ -1653,44 +1530,12 @@ item
 toolbarbutton
 -
 icon
-[
-label
-]
-:
-not
-(
-[
-label
-=
-"
-"
-]
-)
-.
-bookmark
--
-item
->
-.
-toolbarbutton
--
-icon
-[
-type
-=
-"
-menu
-"
-]
 {
--
-moz
--
-margin
--
-end
+display
 :
-5px
+none
+!
+important
 ;
 }
 .
@@ -2283,6 +2128,95 @@ orient
 :
 vertical
 ;
+}
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+.
+toolbarbutton
+-
+1
+:
+not
+(
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+)
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+#
+restore
+-
+button
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+toolbarbutton
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+toolbarbutton
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+{
 padding
 :
 0
@@ -2340,9 +2274,6 @@ box
 ;
 }
 toolbar
-:
-not
-(
 [
 mode
 =
@@ -2350,7 +2281,6 @@ mode
 icons
 "
 ]
-)
 .
 toolbarbutton
 -
@@ -2369,9 +2299,6 @@ button
 ]
 )
 toolbar
-:
-not
-(
 [
 mode
 =
@@ -2379,15 +2306,11 @@ mode
 icons
 "
 ]
-)
 #
 restore
 -
 button
 toolbar
-:
-not
-(
 [
 mode
 =
@@ -2395,101 +2318,6 @@ mode
 icons
 "
 ]
-)
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
->
-.
-toolbarbutton
--
-menubutton
--
-button
-toolbar
-:
-not
-(
-[
-mode
-=
-"
-icons
-"
-]
-)
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
->
-.
-toolbarbutton
--
-menubutton
--
-dropmarker
-{
-padding
-:
-0
-;
-height
-:
-auto
-;
-border
-:
-none
-;
--
-moz
--
-box
--
-shadow
-:
-none
-;
-background
-:
-none
-;
-}
-.
-toolbarbutton
--
-1
-:
-not
-(
-[
-type
-=
-"
-menu
--
-button
-"
-]
-)
-#
-restore
--
-button
 toolbarbutton
 [
 type
@@ -2513,88 +2341,6 @@ min
 width
 :
 28px
-;
-}
-toolbar
-:
-not
-(
-[
-mode
-=
-"
-icons
-"
-]
-)
-.
-toolbarbutton
--
-1
-:
-not
-(
-[
-type
-=
-"
-menu
--
-button
-"
-]
-)
-toolbar
-:
-not
-(
-[
-mode
-=
-"
-icons
-"
-]
-)
-#
-restore
--
-button
-toolbar
-:
-not
-(
-[
-mode
-=
-"
-icons
-"
-]
-)
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
->
-.
-toolbarbutton
--
-menubutton
--
-button
-{
-min
--
-width
-:
-0
 ;
 }
 .
@@ -2818,6 +2564,33 @@ dropmarker
 png
 )
 ;
+}
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+toolbarbutton
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+{
 width
 :
 14px
@@ -2841,9 +2614,6 @@ important
 ;
 }
 toolbar
-:
-not
-(
 [
 mode
 =
@@ -2851,36 +2621,6 @@ mode
 icons
 "
 ]
-)
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
->
-.
-toolbarbutton
--
-menubutton
--
-dropmarker
-{
-width
-:
-auto
-;
-padding
--
-top
-:
-0
-;
-}
 toolbarbutton
 [
 type
@@ -2908,6 +2648,14 @@ dir
 (
 rtl
 )
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
 toolbarbutton
 [
 type
@@ -2959,6 +2707,14 @@ bottomleft
 0
 ;
 }
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
 toolbarbutton
 [
 type
@@ -2986,6 +2742,14 @@ dir
 (
 ltr
 )
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
 toolbarbutton
 [
 type
@@ -3657,48 +3421,6 @@ rgba
 3px
 5px
 loweredShadow
-;
-}
-toolbar
-[
-mode
-=
-"
-icons
-"
-]
-.
-toolbarbutton
--
-1
->
-menupopup
-toolbar
-[
-mode
-=
-"
-icons
-"
-]
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
->
-menupopup
-{
-margin
--
-top
-:
-1px
 ;
 }
 #
@@ -4701,6 +4423,35 @@ end
 ;
 }
 #
+tabcandy
+-
+button
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabcandy
+/
+tabcandy
+.
+png
+)
+;
+}
+#
 downloads
 -
 button
@@ -4900,21 +4651,6 @@ bookmark
 -
 item
 {
--
-moz
--
-image
--
-region
-:
-rect
-(
-2px
-178px
-18px
-162px
-)
-;
 list
 -
 style
@@ -5580,10 +5316,24 @@ identity
 -
 box
 :
--
-moz
--
-focusring
+focus
+:
+not
+(
+:
+active
+)
+:
+not
+(
+[
+open
+=
+"
+true
+"
+]
+)
 {
 -
 moz
@@ -6187,7 +5937,7 @@ margin
 top
 :
 -
-3px
+2px
 ;
 margin
 -
@@ -9853,6 +9603,59 @@ display
 none
 ;
 }
+#
+nav
+-
+bar
+[
+collapsed
+=
+"
+true
+"
+]
++
+toolbar
+[
+customindex
+]
+{
+border
+-
+top
+:
+2px
+solid
+;
+-
+moz
+-
+border
+-
+top
+-
+colors
+:
+rgba
+(
+0
+0
+0
+0
+.
+35
+)
+rgba
+(
+255
+255
+255
+0
+.
+45
+)
+;
+}
 .
 bookmark
 -
@@ -9948,11 +9751,11 @@ png
 "
 )
 ;
-vertical
+margin
 -
-align
+top
 :
-middle
+2px
 ;
 }
 .
@@ -10414,7 +10217,7 @@ margin
 -
 top
 :
-1px
+3px
 ;
 margin
 -
@@ -10495,9 +10298,8 @@ margin
 ;
 padding
 :
-2px
-5px
 0
+5px
 ;
 border
 -
@@ -10518,7 +10320,7 @@ moz
 -
 border
 -
-top
+right
 -
 colors
 :
@@ -10528,7 +10330,7 @@ rgba
 0
 0
 .
-04
+08
 )
 rgba
 (
@@ -10540,11 +10342,11 @@ rgba
 )
 rgba
 (
-255
-255
-255
+180
+180
+180
 .
-35
+29
 )
 ;
 -
@@ -10562,7 +10364,7 @@ rgba
 0
 0
 .
-04
+08
 )
 rgba
 (
@@ -10574,45 +10376,11 @@ rgba
 )
 rgba
 (
-255
-255
-255
+180
+180
+180
 .
-25
-)
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-rgba
-(
-0
-0
-0
-.
-04
-)
-rgba
-(
-0
-0
-0
-.
-17
-)
-rgba
-(
-255
-255
-255
-.
-1
+29
 )
 ;
 -
@@ -10630,7 +10398,7 @@ rgba
 0
 0
 .
-04
+08
 )
 rgba
 (
@@ -10642,11 +10410,11 @@ rgba
 )
 rgba
 (
-255
-255
-255
+180
+180
+180
 .
-1
+29
 )
 ;
 background
@@ -10691,127 +10459,6 @@ png
 )
 ;
 }
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-true
-"
-]
->
-.
-tabbrowser
--
-tab
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-true
-"
-]
->
-.
-tabbrowser
--
-arrowscrollbox
->
-.
-tabs
--
-newtab
--
-button
-{
-border
--
-top
--
-style
-:
-solid
-;
-border
--
-bottom
--
-style
-:
-none
-;
--
-moz
--
-border
--
-radius
-:
-6px
-6px
-0
-0
-;
-padding
--
-top
-:
-0
-;
-padding
--
-bottom
-:
-2px
-;
-margin
--
-top
-:
-1px
-;
-margin
--
-bottom
-:
-0
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-rgba
-(
-255
-255
-255
-.
-2
-)
-rgba
-(
-255
-255
-255
-0
-)
-)
-;
-}
 .
 tabs
 -
@@ -10823,67 +10470,10 @@ width
 :
 34px
 ;
-}
-.
-tabs
--
-newtab
--
-button
->
-.
-toolbarbutton
--
-icon
-{
-margin
+padding
 -
 top
 :
--
-1px
-;
-}
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-true
-"
-]
->
-.
-tabbrowser
--
-arrowscrollbox
->
-.
-tabs
--
-newtab
--
-button
->
-.
-toolbarbutton
--
-icon
-{
-margin
--
-top
-:
-0
-;
-margin
--
-bottom
-:
--
 1px
 ;
 }
@@ -10925,6 +10515,44 @@ true
 "
 ]
 {
+padding
+:
+0
+6px
+1px
+;
+border
+-
+width
+:
+2px
+;
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+rgba
+(
+0
+0
+0
+.
+1
+)
+rgba
+(
+0
+0
+0
+.
+2
+)
+;
 -
 moz
 -
@@ -10940,7 +10568,7 @@ rgba
 0
 0
 .
-04
+1
 )
 rgba
 (
@@ -10948,15 +10576,7 @@ rgba
 0
 0
 .
-17
-)
-rgba
-(
-255
-255
-255
-.
-3
+2
 )
 ;
 -
@@ -10974,7 +10594,7 @@ rgba
 0
 0
 .
-04
+1
 )
 rgba
 (
@@ -10982,49 +10602,7 @@ rgba
 0
 0
 .
-17
-)
-rgba
-(
-255
-255
-255
-.
-3
-)
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-rgba
-(
-0
-0
-0
-.
-04
-)
-rgba
-(
-0
-0
-0
-.
-17
-)
-rgba
-(
-255
-255
-255
-.
-35
+2
 )
 ;
 background
@@ -11078,162 +10656,6 @@ mac
 chrome
 -
 inactive
-;
-}
-#
-tabbrowser
--
-tabs
-[
-tabsontop
-=
-"
-true
-"
-]
->
-.
-tabbrowser
--
-tab
-[
-selected
-=
-"
-true
-"
-]
-{
--
-moz
--
-border
--
-top
--
-colors
-:
-rgba
-(
-0
-0
-0
-.
-04
-)
-rgba
-(
-0
-0
-0
-.
-17
-)
-rgba
-(
-255
-255
-255
-.
-9
-)
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-rgba
-(
-0
-0
-0
-.
-04
-)
-rgba
-(
-0
-0
-0
-.
-17
-)
-rgba
-(
-255
-255
-255
-.
-6
-)
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-rgba
-(
-0
-0
-0
-.
-04
-)
-rgba
-(
-0
-0
-0
-.
-17
-)
-rgba
-(
-255
-255
-255
-.
-6
-)
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-rgba
-(
-255
-255
-255
-.
-7
-)
-rgba
-(
-255
-255
-255
-.
-58
-)
-)
 ;
 }
 .
@@ -11323,75 +10745,6 @@ inherit
 }
 #
 TabsToolbar
-[
-tabsontop
-=
-"
-true
-"
-]
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
-{
-padding
--
-bottom
-:
-1px
-;
--
-moz
--
-box
--
-shadow
-:
-0
--
-6px
-5px
--
-5px
-rgba
-(
-0
-0
-0
-.
-3
-)
-inset
-0
--
-2px
-0
-rgba
-(
-0
-0
-0
-.
-2
-)
-inset
-;
-}
-#
-TabsToolbar
-[
-tabsontop
-=
-"
-false
-"
-]
 {
 -
 moz
@@ -11400,6 +10753,26 @@ appearance
 :
 none
 ;
+}
+#
+navigator
+-
+toolbox
+:
+not
+(
+[
+tabsontop
+=
+"
+true
+"
+]
+)
+>
+#
+TabsToolbar
+{
 margin
 -
 top
@@ -11419,13 +10792,6 @@ solid
 }
 #
 TabsToolbar
-[
-tabsontop
-=
-"
-false
-"
-]
 :
 not
 (
@@ -11469,13 +10835,6 @@ x
 }
 #
 TabsToolbar
-[
-tabsontop
-=
-"
-false
-"
-]
 :
 not
 (
@@ -11609,6 +10968,12 @@ end
 !
 important
 ;
+margin
+-
+top
+:
+1px
+;
 padding
 :
 0
@@ -11665,6 +11030,8 @@ padding
 ;
 margin
 :
+1px
+0
 0
 ;
 background
@@ -12126,6 +11493,27 @@ rect
 11px
 )
 ;
+background
+-
+color
+:
+rgba
+(
+0
+0
+0
+0
+.
+10
+)
+;
+-
+moz
+-
+transition
+:
+none
+;
 }
 .
 tabbrowser
@@ -12167,6 +11555,20 @@ rect
 44px
 17px
 33px
+)
+;
+background
+-
+color
+:
+rgba
+(
+0
+0
+0
+0
+.
+20
 )
 ;
 }
@@ -12220,6 +11622,14 @@ rect
 !
 important
 ;
+background
+-
+color
+:
+transparent
+!
+important
+;
 }
 #
 TabsToolbar
@@ -12231,24 +11641,6 @@ TabsToolbar
 toolbarpaletteitem
 >
 toolbarbutton
-#
-TabsToolbar
->
-#
-bookmarks
--
-menu
--
-button
--
-container
->
-#
-bookmarks
--
-menu
--
-button
 #
 TabsToolbar
 >
@@ -12405,24 +11797,6 @@ button
 "
 ]
 )
-#
-TabsToolbar
->
-#
-bookmarks
--
-menu
--
-button
--
-container
->
-#
-bookmarks
--
-menu
--
-button
 #
 TabsToolbar
 >
@@ -12643,29 +12017,6 @@ icon
 #
 TabsToolbar
 >
-#
-bookmarks
--
-menu
--
-button
--
-container
->
-#
-bookmarks
--
-menu
--
-button
->
-.
-toolbarbutton
--
-icon
-#
-TabsToolbar
->
 toolbarbutton
 [
 type
@@ -12721,109 +12072,10 @@ padding
 0
 ;
 }
-.
-tabbrowser
--
-arrowscrollbox
->
-.
-scrollbutton
--
-up
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
-:
-hover
-.
-tabbrowser
--
-arrowscrollbox
->
-.
-scrollbutton
--
-down
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
-:
-hover
 #
 TabsToolbar
 >
 toolbarbutton
-:
-not
-(
-[
-type
-=
-"
-menu
--
-button
-"
-]
-)
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
-:
-not
-(
-[
-open
-=
-"
-true
-"
-]
-)
-:
-hover
-#
-TabsToolbar
->
-#
-bookmarks
--
-menu
--
-button
--
-container
->
-#
-bookmarks
--
-menu
--
-button
 :
 not
 (
@@ -12941,127 +12193,25 @@ dropmarker
 {
 background
 -
-image
+color
 :
--
-moz
--
-linear
--
-gradient
-(
-transparent
 rgba
 (
 0
 0
 0
+0
 .
-15
-)
+10
 )
 !
 important
 ;
 }
-.
-tabbrowser
--
-arrowscrollbox
->
-.
-scrollbutton
--
-up
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
-:
-hover
-:
-active
-.
-tabbrowser
--
-arrowscrollbox
->
-.
-scrollbutton
--
-down
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
-:
-hover
-:
-active
 #
 TabsToolbar
 >
 toolbarbutton
-:
-not
-(
-[
-type
-=
-"
-menu
--
-button
-"
-]
-)
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
-:
-hover
-:
-active
-#
-TabsToolbar
->
-#
-bookmarks
--
-menu
--
-button
--
-container
->
-#
-bookmarks
--
-menu
--
-button
 :
 not
 (
@@ -13186,24 +12336,16 @@ dropmarker
 {
 background
 -
-image
+color
 :
--
-moz
--
-linear
--
-gradient
-(
-transparent
 rgba
 (
 0
 0
 0
+0
 .
-3
-)
+20
 )
 !
 important
@@ -14422,69 +13564,6 @@ margin
 3px
 ;
 }
-.
-notification
--
-anchor
--
-icon
-{
-width
-:
-16px
-;
-height
-:
-16px
-;
-margin
-:
-0
-2px
-;
-}
-.
-notification
--
-anchor
--
-icon
-:
--
-moz
--
-focusring
-{
--
-moz
--
-box
--
-shadow
-:
-0
-0
-3px
-1px
--
-moz
--
-mac
--
-focusring
-inset
-0
-0
-3px
-2px
--
-moz
--
-mac
--
-focusring
-;
-}
 #
 geo
 -
@@ -14508,45 +13587,23 @@ browser
 /
 skin
 /
-Geolocation
--
-16
+Geo
 .
 png
 )
 ;
-}
-#
-addons
--
-notification
--
-icon
-{
-list
--
-style
--
-image
+width
 :
-url
-(
-chrome
+16px
+;
+height
 :
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensionGeneric
--
-16
-.
-png
-)
+16px
+;
+margin
+:
+0
+2px
 ;
 }
 .
@@ -14617,111 +13674,10 @@ browser
 /
 skin
 /
-Geolocation
--
-64
+Geo
 .
 png
 )
-;
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-xpinstall
--
-disabled
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-blocked
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-failed
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-complete
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensionGeneric
-.
-png
-)
-;
-width
-:
-32px
-;
-height
-:
-32px
 ;
 }
 #
@@ -15725,100 +14681,5 @@ box
 shadow
 :
 focusRingShadow
-;
-}
-#
-highlighter
--
-panel
-{
--
-moz
--
-appearance
-:
-none
-;
--
-moz
--
-window
--
-shadow
-:
-none
-;
-}
-listitem
-.
-style
--
-selector
-{
-background
--
-color
-:
-DarkGray
-;
-color
-:
-white
-;
-}
-listitem
-.
-style
--
-section
-{
-background
--
-color
-:
-LightGray
-;
-color
-:
-black
-;
-font
--
-weight
-:
-bold
-;
-}
-panel
-[
-dimmed
-=
-"
-true
-"
-]
-{
-opacity
-:
-0
-.
-5
-;
-}
-#
-sync
--
-status
--
-button
-.
-statusbarpanel
--
-iconic
-{
-padding
-:
-0
-5px
 ;
 }
