--- a/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
+++ b/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
@@ -177,6 +177,7 @@ rgba
 0
 0
 2px
+;
 cursor
 :
 pointer
@@ -987,7 +988,7 @@ border
 top
 :
 2px
-solid
+dashed
 rgba
 (
 0
@@ -995,7 +996,7 @@ rgba
 0
 0
 .
-13
+15
 )
 ;
 border
@@ -1003,7 +1004,7 @@ border
 left
 :
 2px
-solid
+dashed
 rgba
 (
 0
@@ -1011,7 +1012,7 @@ rgba
 0
 0
 .
-13
+15
 )
 ;
 }
