+ Removed placebo hack from Storage.wipe() + Removed TabItems.reconstitute(), which we haven't actually needed for a while, but now it's also causing trouble + Removed Utils.activeWindow, which doesn't seem to work, and replaced its use in Utils.activeTab (the only remaining place it was being used) with Utils.getCurrentWindow(), which does seem to work + Utils.assert() now dumps a trace + Fixed paths to the edit pencil and new tab button images; they should now show up properly
UltraBlame original commit: b08ca210a74356658ca0993ab9602ed9f7d83e1e

--- a/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
+++ b/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
@@ -1132,10 +1132,15 @@ image
 :
 url
 (
-.
-.
+chrome
+:
 /
-img
+/
+browser
+/
+skin
+/
+tabcandy
 /
 new
 -
@@ -1570,10 +1575,15 @@ image
 :
 url
 (
-.
-.
+chrome
+:
 /
-img
+/
+browser
+/
+skin
+/
+tabcandy
 /
 edit
 -
