--- a/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
+++ b/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
@@ -988,7 +988,7 @@ border
 top
 :
 2px
-dashed
+solid
 rgba
 (
 0
@@ -996,7 +996,7 @@ rgba
 0
 0
 .
-15
+13
 )
 ;
 border
@@ -1004,7 +1004,7 @@ border
 left
 :
 2px
-dashed
+solid
 rgba
 (
 0
@@ -1012,7 +1012,7 @@ rgba
 0
 0
 .
-15
+13
 )
 ;
 }
