Change the style of the guide lines to feel lighter and more in-style.
UltraBlame original commit: 1f3f1046c24718e49164d1779d0d6dc30bff9ed9

--- a/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
+++ b/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
@@ -989,15 +989,6 @@ top
 :
 2px
 solid
-rgba
-(
-0
-0
-0
-0
-.
-13
-)
 ;
 border
 -
@@ -1005,6 +996,16 @@ left
 :
 2px
 solid
+;
+-
+moz
+-
+border
+-
+top
+-
+colors
+:
 rgba
 (
 0
@@ -1012,7 +1013,42 @@ rgba
 0
 0
 .
-13
+1
+)
+rgba
+(
+255
+255
+255
+.
+25
+)
+;
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+rgba
+(
+0
+0
+0
+0
+.
+1
+)
+rgba
+(
+255
+255
+255
+.
+25
 )
 ;
 }
@@ -1132,15 +1168,10 @@ image
 :
 url
 (
-chrome
-:
+.
+.
 /
-/
-browser
-/
-skin
-/
-tabcandy
+img
 /
 new
 -
@@ -1575,15 +1606,10 @@ image
 :
 url
 (
-chrome
-:
+.
+.
 /
-/
-browser
-/
-skin
-/
-tabcandy
+img
 /
 edit
 -
