--- a/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
+++ b/browser/themes/pinstripe/browser/tabcandy/tabcandy.css
@@ -984,71 +984,47 @@ opacity
 9
 ;
 border
--
-top
 :
-2px
-solid
-;
-border
--
-left
-:
-2px
-solid
-;
--
-moz
--
-border
--
-top
--
-colors
-:
+1px
+dashed
 rgba
 (
 0
 0
 0
-0
 .
-1
+08
 )
-rgba
-(
-255
-255
-255
-.
-25
-)
+;
+border
+-
+bottom
+:
+none
+;
+border
+-
+right
+:
+none
 ;
 -
 moz
 -
-border
+box
 -
-left
--
-colors
+shadow
 :
+1px
+1px
+0
 rgba
 (
-0
-0
-0
-0
+255
+255
+255
 .
 1
-)
-rgba
-(
-255
-255
-255
-.
-25
 )
 ;
 }
@@ -1168,10 +1144,15 @@ image
 :
 url
 (
-.
-.
+chrome
+:
 /
-img
+/
+browser
+/
+skin
+/
+tabcandy
 /
 new
 -
@@ -1606,10 +1587,15 @@ image
 :
 url
 (
-.
-.
+chrome
+:
 /
-img
+/
+browser
+/
+skin
+/
+tabcandy
 /
 edit
 -
