Bug 577947: TabCandy toolbarbutton lacks styling on Windows and Linux.
UltraBlame original commit: e81604098ae6e6b7dcac4842a7aeb54e870342fd

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -4038,6 +4038,35 @@ disabled
 ;
 }
 #
+tabcandy
+-
+button
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabcandy
+/
+tabcandy
+.
+png
+)
+;
+}
+#
 downloads
 -
 button
@@ -6892,10 +6921,7 @@ identity
 -
 box
 :
--
-moz
--
-focusring
+focus
 {
 outline
 :
@@ -7589,111 +7615,10 @@ browser
 /
 skin
 /
-Geolocation
--
-64
+Geo
 .
 png
 )
-;
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-xpinstall
--
-disabled
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-blocked
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-failed
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-complete
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensionGeneric
-.
-png
-)
-;
-width
-:
-32px
-;
-height
-:
-32px
 ;
 }
 #
@@ -7707,44 +7632,6 @@ margin
 :
 0
 3px
-;
-}
-.
-notification
--
-anchor
--
-icon
-{
-width
-:
-16px
-;
-height
-:
-16px
-;
-}
-.
-notification
--
-anchor
--
-icon
-:
--
-moz
--
-focusring
-{
-outline
-:
-1px
-dotted
--
-moz
--
-DialogText
 ;
 }
 #
@@ -7770,45 +7657,18 @@ browser
 /
 skin
 /
-Geolocation
--
-16
+Geo
 .
 png
 )
 ;
-}
-#
-addons
--
-notification
--
-icon
-{
-list
--
-style
--
-image
+width
 :
-url
-(
-chrome
+16px
+;
+height
 :
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensionGeneric
--
-16
-.
-png
-)
+16px
 ;
 }
 #
@@ -8851,24 +8711,6 @@ TabsToolbar
 toolbarpaletteitem
 >
 toolbarbutton
-#
-TabsToolbar
->
-#
-bookmarks
--
-menu
--
-button
--
-container
->
-#
-bookmarks
--
-menu
--
-button
 {
 margin
 -
@@ -9473,6 +9315,72 @@ rect
 144px
 16px
 128px
+)
+;
+}
+#
+context_newTab
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Toolbar
+-
+small
+.
+png
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+64px
+16px
+48px
+)
+;
+}
+#
+context_newTab
+[
+disabled
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+16px
+64px
+32px
+48px
 )
 ;
 }
@@ -10890,83 +10798,5 @@ translate
 0
 2px
 )
-;
-}
-#
-highlighter
--
-panel
-{
--
-moz
--
-appearance
-:
-none
-;
--
-moz
--
-window
--
-shadow
-:
-none
-;
-}
-listitem
-.
-style
--
-selector
-{
-background
--
-color
-:
-DarkGray
-;
-color
-:
-white
-;
-}
-listitem
-.
-style
--
-section
-{
-background
--
-color
-:
-LightGray
-;
-color
-:
-black
-;
-font
--
-weight
-:
-bold
-;
-}
-panel
-[
-dimmed
-=
-"
-true
-"
-]
-{
-opacity
-:
-0
-.
-5
 ;
 }
