--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -150,18 +150,31 @@ appearance
 :
 none
 ;
-background
--
-color
-:
-transparent
-;
 border
 -
 top
 :
 none
 ;
+background
+-
+color
+:
+transparent
+;
+}
+#
+navigator
+-
+toolbox
+[
+tabsontop
+=
+"
+true
+"
+]
+{
 border
 -
 bottom
@@ -298,138 +311,6 @@ moz
 -
 lwtheme
 )
-#
-nav
--
-bar
-[
-collapsed
-=
-"
-true
-"
-]
-+
-toolbar
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
-#
-nav
--
-bar
-[
-collapsed
-=
-"
-true
-"
-]
-+
-#
-customToolbars
-+
-#
-PersonalToolbar
-:
-not
-(
-:
--
-moz
--
-lwtheme
-)
-#
-navigator
--
-toolbox
-[
-tabsontop
-=
-"
-true
-"
-]
->
-#
-nav
--
-bar
-#
-navigator
--
-toolbox
-[
-tabsontop
-=
-"
-true
-"
-]
-:
-not
-(
-[
-customizing
-]
-)
->
-#
-nav
--
-bar
-[
-collapsed
-=
-"
-true
-"
-]
-+
-toolbar
-#
-navigator
--
-toolbox
-[
-tabsontop
-=
-"
-true
-"
-]
-:
-not
-(
-[
-customizing
-]
-)
->
-#
-nav
--
-bar
-[
-collapsed
-=
-"
-true
-"
-]
-+
-#
-customToolbars
-+
-#
-PersonalToolbar
 {
 background
 -
@@ -457,13 +338,17 @@ rgba
 navigator
 -
 toolbox
+:
+not
+(
 [
 tabsontop
 =
 "
-false
+true
 "
 ]
+)
 >
 #
 toolbar
@@ -1162,13 +1047,6 @@ true
 ~
 #
 TabsToolbar
-:
-not
-(
-[
-inFullscreen
-]
-)
 {
 -
 moz
@@ -2677,17 +2555,6 @@ true
 :
 not
 (
-[
-open
-=
-"
-true
-"
-]
-)
-:
-not
-(
 :
 active
 )
@@ -3127,158 +2994,6 @@ height
 }
 toolbar
 [
-iconsize
-=
-"
-small
-"
-]
-.
-toolbarbutton
--
-menubutton
--
-button
->
-.
-toolbarbutton
--
-icon
-toolbar
-[
-iconsize
-=
-"
-small
-"
-]
-.
-toolbarbutton
--
-1
->
-.
-toolbarbutton
--
-icon
-{
-margin
-:
-1px
-;
-width
-:
-16px
-;
-height
-:
-16px
-;
-}
-:
--
-moz
--
-any
-(
-#
-back
--
-button
-#
-forward
--
-button
-#
-reload
--
-button
-#
-stop
--
-button
-#
-home
--
-button
-#
-print
--
-button
-#
-downloads
--
-button
-#
-history
--
-button
-#
-bookmarks
--
-button
-#
-bookmarks
--
-menu
--
-button
-#
-new
--
-tab
--
-button
-#
-new
--
-window
--
-button
-#
-cut
--
-button
-#
-copy
--
-button
-#
-paste
--
-button
-#
-fullscreen
--
-button
-)
->
-.
-toolbarbutton
--
-icon
-{
-margin
-:
-0
-!
-important
-;
-width
-:
-auto
-!
-important
-;
-height
-:
-auto
-!
-important
-;
-}
-toolbar
-[
 mode
 =
 "
@@ -3327,24 +3042,6 @@ toolbarpaletteitem
 toolbarbutton
 -
 1
-#
-TabsToolbar
->
-#
-bookmarks
--
-menu
--
-button
--
-container
->
-#
-bookmarks
--
-menu
--
-button
 {
 -
 moz
@@ -4051,6 +3748,44 @@ rgba
 .
 4
 )
+;
+}
+toolbar
+:
+not
+(
+[
+iconsize
+=
+"
+small
+"
+]
+)
+[
+mode
+=
+"
+icons
+"
+]
+#
+back
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+width
+:
+auto
+;
+height
+:
+auto
 ;
 }
 toolbar
@@ -4803,6 +4538,35 @@ rect
 90px
 18px
 72px
+)
+;
+}
+#
+tabcandy
+-
+button
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabcandy
+/
+tabcandy
+.
+png
 )
 ;
 }
@@ -6084,10 +5848,7 @@ identity
 -
 box
 :
--
-moz
--
-focusring
+focus
 {
 outline
 :
@@ -6113,10 +5874,7 @@ box
 .
 verifiedDomain
 :
--
-moz
--
-focusring
+focus
 #
 identity
 -
@@ -6124,10 +5882,7 @@ box
 .
 verifiedIdentity
 :
--
-moz
--
-focusring
+focus
 {
 outline
 -
@@ -7614,6 +7369,19 @@ padding
 :
 0
 ;
+-
+moz
+-
+box
+-
+shadow
+:
+0
+-
+1px
+ThreeDShadow
+inset
+;
 }
 #
 TabsToolbar
@@ -7627,14 +7395,23 @@ moz
 lwtheme
 )
 #
-TabsToolbar
+navigator
+-
+toolbox
+:
+not
+(
 [
 tabsontop
 =
 "
-false
+true
 "
 ]
+)
+>
+#
+TabsToolbar
 {
 background
 -
@@ -7649,7 +7426,7 @@ gradient
 (
 transparent
 transparent
-50
+10
 %
 rgba
 (
@@ -7657,9 +7434,9 @@ rgba
 0
 0
 .
-05
+03
 )
-90
+50
 %
 rgba
 (
@@ -7669,40 +7446,17 @@ rgba
 .
 1
 )
-)
-;
-}
-#
-TabsToolbar
-[
-tabsontop
-=
-"
-true
-"
-]
-:
-not
+90
+%
+rgba
 (
-:
--
-moz
--
-lwtheme
-)
-{
--
-moz
--
-box
--
-shadow
-:
 0
--
-1px
-ThreeDShadow
-inset
+0
+0
+.
+2
+)
+)
 ;
 }
 .
@@ -7783,28 +7537,33 @@ linear
 -
 gradient
 (
-hsla
+left
+transparent
+transparent
+1px
+rgba
 (
-0
-0
+50
+%
+50
 %
 50
 %
 .
 1
 )
-hsla
+1px
+rgba
 (
-0
-0
+50
 %
-37
+50
+%
+50
 %
 .
 1
 )
-50
-%
 )
 ;
 background
@@ -7812,7 +7571,7 @@ background
 position
 :
 -
-5px
+6px
 -
 2px
 ;
@@ -7903,138 +7662,27 @@ linear
 -
 gradient
 (
-hsla
-(
-0
-0
-%
-100
-%
-.
-4
-)
-hsla
-(
-0
-0
-%
-75
-%
-.
-4
-)
-50
-%
-)
-;
-}
-.
-tabbrowser
--
-tab
-[
-selected
-=
-"
-true
-"
-]
-{
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
+left
+transparent
+transparent
+1px
 rgba
 (
 255
 255
 255
 .
-7
+4
 )
-toolbarHighlight
-30
-%
-)
--
-moz
--
-linear
--
-gradient
-(
--
-moz
--
-dialog
--
-moz
--
-dialog
-)
-;
-}
-.
-tabbrowser
--
-tab
-:
--
-moz
--
-lwtheme
-{
-color
-:
-inherit
-;
-}
-.
-tabbrowser
--
-tab
-[
-selected
-=
-"
-true
-"
-]
-:
--
-moz
--
-lwtheme
-{
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
+1px
 rgba
 (
 255
 255
 255
 .
-7
+4
 )
-toolbarHighlight
-30
-%
 )
 ;
 }
@@ -8049,17 +7697,6 @@ moz
 lwtheme
 -
 brighttext
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
 .
 tabs
 -
@@ -8085,28 +7722,33 @@ linear
 -
 gradient
 (
-hsla
+left
+transparent
+transparent
+1px
+rgba
 (
-0
-0
+40
+%
+40
 %
 40
 %
 .
 6
 )
-hsla
+1px
+rgba
 (
-0
-0
+40
 %
-30
+40
+%
+40
 %
 .
 6
 )
-50
-%
 )
 ;
 }
@@ -8161,28 +7803,33 @@ linear
 -
 gradient
 (
-hsla
+left
+transparent
+transparent
+1px
+rgba
 (
-0
-0
+60
+%
+60
 %
 60
 %
 .
 6
 )
-hsla
+1px
+rgba
 (
-0
-0
+60
 %
-45
+60
+%
+60
 %
 .
 6
 )
-50
-%
 )
 ;
 }
@@ -8197,17 +7844,6 @@ moz
 lwtheme
 -
 darktext
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
 .
 tabs
 -
@@ -8233,28 +7869,27 @@ linear
 -
 gradient
 (
-hsla
+left
+transparent
+transparent
+1px
+rgba
 (
-0
-0
-%
-60
-%
+255
+255
+255
 .
-5
+4
 )
-hsla
+1px
+rgba
 (
-0
-0
-%
-45
-%
+255
+255
+255
 .
-5
+4
 )
-50
-%
 )
 ;
 }
@@ -8309,29 +7944,252 @@ linear
 -
 gradient
 (
-hsla
+left
+transparent
+transparent
+1px
+rgba
 (
-0
-0
-%
-80
-%
+255
+255
+255
 .
-5
+6
 )
-hsla
+1px
+rgba
 (
+255
+255
+255
+.
+6
+)
+)
+;
+}
+.
+tabbrowser
+-
+tab
+[
+selected
+=
+"
+true
+"
+]
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+left
+transparent
+transparent
+1px
+white
+1px
+white
+)
+;
+color
+:
+black
+;
+}
+#
+navigator
+-
+toolbox
+[
+tabsontop
+=
+"
+true
+"
+]
+>
+#
+TabsToolbar
+>
+#
+tabbrowser
+-
+tabs
+>
+.
+tabbrowser
+-
+tab
+[
+selected
+=
+"
+true
+"
+]
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+{
+background
+-
+image
+:
+-
+moz
+-
+radial
+-
+gradient
+(
+center
+top
+white
+rgba
+(
+255
+255
+255
 0
-0
-%
+)
 60
 %
-.
-5
 )
-50
+-
+moz
+-
+linear
+-
+gradient
+(
+left
+transparent
+transparent
+1px
+toolbarHighlight
+1px
+toolbarHighlight
+)
+-
+moz
+-
+linear
+-
+gradient
+(
+left
+transparent
+transparent
+1px
+-
+moz
+-
+dialog
+1px
+-
+moz
+-
+dialog
+)
+;
+background
+-
+position
+:
+center
+-
+2px
+-
+6px
+-
+2px
+-
+6px
+-
+2px
+;
+background
+-
+size
+:
+100
 %
+200
+%
+200
+%
+;
+color
+:
+-
+moz
+-
+dialogText
+;
+}
+.
+tabbrowser
+-
+tab
+:
+-
+moz
+-
+lwtheme
+[
+selected
+=
+"
+true
+"
+]
+{
+text
+-
+shadow
+:
+none
+;
+}
+.
+tabbrowser
+-
+tab
+:
+-
+moz
+-
+lwtheme
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
 )
+{
+color
+:
+inherit
 ;
 }
 .
@@ -8924,10 +8782,10 @@ region
 :
 rect
 (
-0
-64px
-16px
-48px
+0px
+56px
+14px
+42px
 )
 ;
 border
@@ -9034,10 +8892,10 @@ region
 :
 rect
 (
-0
-32px
-16px
-16px
+0px
+28px
+14px
+14px
 )
 ;
 }
@@ -9083,10 +8941,10 @@ region
 :
 rect
 (
-0
-48px
-16px
-32px
+0px
+42px
+14px
+28px
 )
 ;
 }
@@ -9118,10 +8976,10 @@ region
 :
 rect
 (
-0
-16px
-16px
-0
+0px
+14px
+14px
+0px
 )
 ;
 -
@@ -9190,24 +9048,6 @@ TabsToolbar
 toolbarpaletteitem
 >
 toolbarbutton
-#
-TabsToolbar
->
-#
-bookmarks
--
-menu
--
-button
--
-container
->
-#
-bookmarks
--
-menu
--
-button
 {
 min
 -
@@ -9251,35 +9091,6 @@ scrollbutton
 -
 down
 {
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-tab
--
-arrow
--
-left
-.
-png
-"
-)
-;
 -
 moz
 -
@@ -9310,6 +9121,67 @@ padding
 bottom
 :
 0
+;
+}
+.
+tabbrowser
+-
+arrowscrollbox
+>
+.
+scrollbutton
+-
+up
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+:
+hover
+.
+tabbrowser
+-
+arrowscrollbox
+>
+.
+scrollbutton
+-
+down
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+:
+hover
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+30px
+17px
+15px
+)
 ;
 }
 .
@@ -9410,9 +9282,59 @@ region
 rect
 (
 0
-30px
+45px
 17px
-15px
+30px
+)
+;
+}
+.
+tabbrowser
+-
+arrowscrollbox
+>
+.
+scrollbutton
+-
+up
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+arrow
+-
+left
+.
+png
+"
 )
 ;
 }
@@ -9435,45 +9357,34 @@ dir
 (
 rtl
 )
->
-.
-toolbarbutton
--
-icon
-.
-tabbrowser
--
-arrowscrollbox
->
-.
-scrollbutton
--
-down
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
->
-.
-toolbarbutton
--
-icon
 {
+list
 -
-moz
+style
 -
-transform
+image
 :
-scaleX
+url
 (
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
 -
-1
+arrow
+-
+right
+.
+png
+"
 )
 ;
 }
@@ -9487,6 +9398,35 @@ scrollbutton
 -
 down
 {
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+arrow
+-
+right
+.
+png
+"
+)
+;
 -
 moz
 -
@@ -9526,6 +9466,56 @@ moz
 transition
 :
 none
+;
+}
+.
+tabbrowser
+-
+arrowscrollbox
+>
+.
+scrollbutton
+-
+down
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+arrow
+-
+left
+.
+png
+"
+)
 ;
 }
 .
@@ -9774,7 +9764,7 @@ rect
 (
 0
 14px
-16px
+17px
 0
 )
 ;
@@ -9799,7 +9789,7 @@ rect
 (
 0
 28px
-16px
+17px
 14px
 )
 ;
@@ -10131,10 +10121,10 @@ region
 :
 rect
 (
-0
-16px
-16px
-0
+0px
+14px
+14px
+0px
 )
 ;
 padding
@@ -10211,10 +10201,10 @@ region
 :
 rect
 (
-0
-32px
-16px
-16px
+0px
+28px
+14px
+14px
 )
 ;
 }
@@ -10236,10 +10226,46 @@ region
 :
 rect
 (
-0
-48px
-16px
-32px
+0px
+42px
+14px
+28px
+)
+;
+}
+#
+sidebar
+-
+header
+>
+.
+tabs
+-
+closebutton
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+closeSidebar
+.
+png
+"
 )
 ;
 }
@@ -11356,111 +11382,10 @@ browser
 /
 skin
 /
-Geolocation
--
-64
+Geo
 .
 png
 )
-;
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-xpinstall
--
-disabled
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-blocked
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-failed
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-complete
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensionGeneric
-.
-png
-)
-;
-width
-:
-32px
-;
-height
-:
-32px
 ;
 }
 #
@@ -11473,51 +11398,6 @@ box
 margin
 :
 0
-3px
-;
-}
-.
-notification
--
-anchor
--
-icon
-{
-width
-:
-16px
-;
-height
-:
-16px
-;
-}
-.
-notification
--
-anchor
--
-icon
-:
--
-moz
--
-focusring
-{
-outline
-:
-1px
-dotted
--
-moz
--
-DialogText
-;
-outline
--
-offset
-:
--
 3px
 ;
 }
@@ -11544,45 +11424,18 @@ browser
 /
 skin
 /
-Geolocation
--
-16
+Geo
 .
 png
 )
 ;
-}
-#
-addons
--
-notification
--
-icon
-{
-list
--
-style
--
-image
+width
 :
-url
-(
-chrome
+16px
+;
+height
 :
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensionGeneric
--
-16
-.
-png
-)
+16px
 ;
 }
 #
@@ -12508,83 +12361,5 @@ dotted
 moz
 -
 dialogText
-;
-}
-#
-highlighter
--
-panel
-{
--
-moz
--
-appearance
-:
-none
-;
--
-moz
--
-window
--
-shadow
-:
-none
-;
-}
-listitem
-.
-style
--
-selector
-{
-background
--
-color
-:
-DarkGray
-;
-color
-:
-white
-;
-}
-listitem
-.
-style
--
-section
-{
-background
--
-color
-:
-LightGray
-;
-color
-:
-black
-;
-font
--
-weight
-:
-bold
-;
-}
-panel
-[
-dimmed
-=
-"
-true
-"
-]
-{
-opacity
-:
-0
-.
-5
 ;
 }
