--- a/browser/base/content/tabcandy/tabcandy.css
+++ b/browser/base/content/tabcandy/tabcandy.css
@@ -53,6 +53,32 @@ auto
 ;
 }
 #
+content
+{
+position
+:
+absolute
+;
+top
+:
+0
+;
+left
+:
+0
+;
+width
+:
+100
+%
+;
+height
+:
+100
+%
+;
+}
+#
 bg
 {
 background
@@ -2100,7 +2126,7 @@ z
 -
 index
 :
-99
+99999
 !
 important
 ;
