Bug 576110: Show saved thumbnails at browser startup if tab candy was last open
UltraBlame original commit: 0acf67333c04def877fed34cb79c87170881f98c

--- a/browser/base/content/tabcandy/tabcandy.css
+++ b/browser/base/content/tabcandy/tabcandy.css
@@ -212,6 +212,10 @@ pointer
 .
 tab
 canvas
+.
+thumb
+-
+placeholder
 {
 border
 :
@@ -253,7 +257,9 @@ height
 ;
 }
 .
-thumbShadow
+thumb
+-
+shadow
 {
 position
 :
@@ -653,7 +659,9 @@ none
 .
 stacked
 .
-thumbShadow
+thumb
+-
+shadow
 {
 display
 :
@@ -793,7 +801,9 @@ expander
 .
 front
 .
-thumbShadow
+thumb
+-
+shadow
 {
 display
 :
