--- a/browser/base/content/tabcandy/tabcandy.css
+++ b/browser/base/content/tabcandy/tabcandy.css
@@ -53,32 +53,6 @@ auto
 ;
 }
 #
-content
-{
-position
-:
-absolute
-;
-top
-:
-0
-;
-left
-:
-0
-;
-width
-:
-100
-%
-;
-height
-:
-100
-%
-;
-}
-#
 bg
 {
 background
@@ -212,10 +186,6 @@ pointer
 .
 tab
 canvas
-.
-thumb
--
-placeholder
 {
 border
 :
@@ -257,9 +227,7 @@ height
 ;
 }
 .
-thumb
--
-shadow
+thumbShadow
 {
 position
 :
@@ -659,9 +627,7 @@ none
 .
 stacked
 .
-thumb
--
-shadow
+thumbShadow
 {
 display
 :
@@ -801,9 +767,7 @@ expander
 .
 front
 .
-thumb
--
-shadow
+thumbShadow
 {
 display
 :
@@ -1074,11 +1038,85 @@ rgba
 ;
 }
 .
-intro
+info
+-
+item
 {
-margin
+position
 :
-10px
+absolute
+;
+cursor
+:
+move
+;
+border
+:
+1px
+solid
+rgba
+(
+230
+230
+230
+1
+)
+;
+background
+-
+color
+:
+rgba
+(
+248
+248
+248
+1
+)
+;
+-
+moz
+-
+border
+-
+radius
+:
+0
+.
+4em
+;
+-
+moz
+-
+box
+-
+shadow
+:
+inset
+rgba
+(
+255
+255
+255
+0
+.
+6
+)
+0
+0
+0
+2px
+rgba
+(
+0
+0
+0
+.
+2
+)
+1px
+1px
+4px
 ;
 }
 .
@@ -1119,7 +1157,7 @@ rgba
 0
 0
 .
-08
+12
 )
 ;
 border
@@ -1150,7 +1188,7 @@ rgba
 255
 255
 .
-1
+15
 )
 ;
 }
@@ -2136,7 +2174,7 @@ z
 -
 index
 :
-99999
+99
 !
 important
 ;
