+ Fixed some commit collisions.
UltraBlame original commit: ff9d94b564c2f0a65a032884e2046c479ed4992e

--- a/browser/base/content/tabcandy/tabcandy.css
+++ b/browser/base/content/tabcandy/tabcandy.css
@@ -53,6 +53,32 @@ auto
 ;
 }
 #
+content
+{
+position
+:
+absolute
+;
+top
+:
+0
+;
+left
+:
+0
+;
+width
+:
+100
+%
+;
+height
+:
+100
+%
+;
+}
+#
 bg
 {
 background
@@ -186,6 +212,10 @@ pointer
 .
 tab
 canvas
+.
+thumb
+-
+placeholder
 {
 border
 :
@@ -227,7 +257,9 @@ height
 ;
 }
 .
-thumbShadow
+thumb
+-
+shadow
 {
 position
 :
@@ -627,7 +659,9 @@ none
 .
 stacked
 .
-thumbShadow
+thumb
+-
+shadow
 {
 display
 :
@@ -767,7 +801,9 @@ expander
 .
 front
 .
-thumbShadow
+thumb
+-
+shadow
 {
 display
 :
@@ -1038,85 +1074,11 @@ rgba
 ;
 }
 .
-info
--
-item
+intro
 {
-position
+margin
 :
-absolute
-;
-cursor
-:
-move
-;
-border
-:
-1px
-solid
-rgba
-(
-230
-230
-230
-1
-)
-;
-background
--
-color
-:
-rgba
-(
-248
-248
-248
-1
-)
-;
--
-moz
--
-border
--
-radius
-:
-0
-.
-4em
-;
--
-moz
--
-box
--
-shadow
-:
-inset
-rgba
-(
-255
-255
-255
-0
-.
-6
-)
-0
-0
-0
-2px
-rgba
-(
-0
-0
-0
-.
-2
-)
-1px
-1px
-4px
+10px
 ;
 }
 .
@@ -2174,7 +2136,7 @@ z
 -
 index
 :
-99
+99999
 !
 important
 ;
