Refactor the code which loads cached images at browser startup
UltraBlame original commit: 78590b6c9948184ff98d7b57e90de1ef39fbeada

--- a/browser/base/content/tabcandy/tabcandy.css
+++ b/browser/base/content/tabcandy/tabcandy.css
@@ -213,9 +213,9 @@ pointer
 tab
 canvas
 .
-thumb
+cached
 -
-placeholder
+thumb
 {
 border
 :
@@ -1119,7 +1119,7 @@ rgba
 0
 0
 .
-12
+08
 )
 ;
 border
@@ -1150,7 +1150,7 @@ rgba
 255
 255
 .
-15
+1
 )
 ;
 }
