Bug 581732 - Merge mozilla-central to tabcandy-central 2010/07/24 (with conflicts).
UltraBlame original commit: d15251ad8da814f7c0d56e2cd4595bed7f8bfe72

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -311,6 +311,22 @@ moz
 -
 lwtheme
 )
+#
+navigator
+-
+toolbox
+[
+tabsontop
+=
+"
+true
+"
+]
+>
+#
+nav
+-
+bar
 {
 background
 -
@@ -338,17 +354,13 @@ rgba
 navigator
 -
 toolbox
-:
-not
-(
 [
 tabsontop
 =
 "
-true
+false
 "
 ]
-)
 >
 #
 toolbar
@@ -7405,19 +7417,6 @@ padding
 :
 0
 ;
--
-moz
--
-box
--
-shadow
-:
-0
--
-1px
-ThreeDShadow
-inset
-;
 }
 #
 TabsToolbar
@@ -7431,24 +7430,28 @@ moz
 lwtheme
 )
 #
-navigator
--
-toolbox
-:
-not
-(
+TabsToolbar
 [
 tabsontop
 =
 "
-true
+false
 "
 ]
-)
->
-#
-TabsToolbar
 {
+-
+moz
+-
+box
+-
+shadow
+:
+0
+-
+1px
+ThreeDShadow
+inset
+;
 background
 -
 image
@@ -7911,20 +7914,26 @@ transparent
 1px
 rgba
 (
-255
-255
-255
+60
+%
+60
+%
+60
+%
 .
-4
+5
 )
 1px
 rgba
 (
-255
-255
-255
+60
+%
+60
+%
+60
+%
 .
-4
+5
 )
 )
 ;
@@ -7986,20 +7995,26 @@ transparent
 1px
 rgba
 (
-255
-255
-255
+80
+%
+80
+%
+80
+%
 .
-6
+5
 )
 1px
 rgba
 (
-255
-255
-255
+80
+%
+80
+%
+80
+%
 .
-6
+5
 )
 )
 ;
@@ -8015,6 +8030,65 @@ selected
 true
 "
 ]
+:
+-
+moz
+-
+lwtheme
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+left
+transparent
+transparent
+1px
+toolbarHighlight
+1px
+toolbarHighlight
+)
+;
+}
+#
+tabbrowser
+-
+tabs
+[
+tabsontop
+=
+"
+false
+"
+]
+>
+.
+tabbrowser
+-
+tab
+[
+selected
+=
+"
+true
+"
+]
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
 {
 background
 -
@@ -8042,9 +8116,9 @@ black
 ;
 }
 #
-navigator
+tabbrowser
 -
-toolbox
+tabs
 [
 tabsontop
 =
@@ -8052,14 +8126,6 @@ tabsontop
 true
 "
 ]
->
-#
-TabsToolbar
->
-#
-tabbrowser
--
-tabs
 >
 .
 tabbrowser
@@ -8187,41 +8253,6 @@ tab
 moz
 -
 lwtheme
-[
-selected
-=
-"
-true
-"
-]
-{
-text
--
-shadow
-:
-none
-;
-}
-.
-tabbrowser
--
-tab
-:
--
-moz
--
-lwtheme
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
 {
 color
 :
