Bug 583044 - Rename code references of TabCandy to TabView Move files and update references to tabview from tabcandy. Only remaining candy reference is the link to aza's webm video.
UltraBlame original commit: 4285a6de57558b9708ab7c35a5214af4fc9cf188

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -4038,7 +4038,7 @@ disabled
 ;
 }
 #
-tabcandy
+tabview
 -
 button
 {
@@ -4058,9 +4058,9 @@ browser
 /
 skin
 /
-tabcandy
+tabview
 /
-tabcandy
+tabview
 .
 png
 )
