--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -4639,7 +4639,7 @@ end
 ;
 }
 #
-tabcandy
+tabview
 -
 button
 {
@@ -4659,9 +4659,9 @@ browser
 /
 skin
 /
-tabcandy
+tabview
 /
-tabcandy
+tabview
 .
 png
 )
