--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -4590,7 +4590,7 @@ rect
 ;
 }
 #
-tabcandy
+tabview
 -
 button
 {
@@ -4610,9 +4610,9 @@ browser
 /
 skin
 /
-tabcandy
+tabview
 /
-tabcandy
+tabview
 .
 png
 )
