--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -12598,3 +12598,46 @@ opacity
 5
 ;
 }
+#
+context_tabViewMenu
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabview
+/
+tabview
+-
+16
+.
+png
+)
+;
+}
+#
+context_tabViewMenuPopup
+>
+menuitem
+.
+group
+{
+padding
+-
+left
+:
+40px
+;
+}
