+ Renamed Group and Groups to GroupItem and GroupItems, respectively + Fixed a bug in "group sites"
UltraBlame original commit: eba34516b87d19da95534cff8b5a35b9931109a8

--- a/browser/base/content/tabview/tabview.css
+++ b/browser/base/content/tabview/tabview.css
@@ -822,7 +822,7 @@ important
 ;
 }
 .
-tabInGroup
+tabInGroupItem
 {
 border
 :
@@ -841,7 +841,7 @@ important
 ;
 }
 .
-group
+groupItem
 {
 position
 :
