--- a/browser/base/content/tabview/tabview.css
+++ b/browser/base/content/tabview/tabview.css
@@ -912,12 +912,39 @@ rgba
 0
 0
 0
+0
 .
 2
 )
 1px
 1px
 4px
+;
+}
+.
+groupItem
+.
+activeGroupItem
+{
+-
+moz
+-
+box
+-
+shadow
+:
+rgba
+(
+0
+0
+0
+0
+.
+6
+)
+1px
+1px
+8px
 ;
 }
 .
