--- a/browser/base/content/tabview/tabview.css
+++ b/browser/base/content/tabview/tabview.css
@@ -1779,6 +1779,37 @@ cursor
 :
 pointer
 ;
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabview
+/
+stack
+-
+expander
+.
+png
+)
+;
+width
+:
+24px
+;
+height
+:
+24px
+;
 }
 .
 stackExpander
@@ -1791,6 +1822,32 @@ opacity
 7
 !
 important
+;
+}
+.
+shield
+{
+left
+:
+0
+;
+top
+:
+0
+;
+width
+:
+100
+%
+;
+height
+:
+100
+%
+;
+position
+:
+absolute
 ;
 }
 .
@@ -1821,13 +1878,21 @@ position
 :
 absolute
 ;
+width
+:
+16px
+;
+height
+:
+16px
+;
 bottom
 :
-6px
+0px
 ;
 right
 :
-6px
+0px
 ;
 opacity
 :
