Bug 586685: All user-facing strings in JS are now localizable via stringbundle [r=dolske a=dolske] NOT. Everything but user facing strings being localized. Random whitespace fixes. Random styling changes. Also has Bug 587158 - Update intro-video URL to CDN'ed version And string changes. And Bug 586814 - Unable to close Tab groups
UltraBlame original commit: 62e087ddf724885e6092f83e5ef354ab87c8bbdc

--- a/browser/base/content/tabview/tabview.css
+++ b/browser/base/content/tabview/tabview.css
@@ -1611,11 +1611,15 @@ left
 20px
 ;
 }
+.
+title
+-
+container
+:
+hover
 input
 .
 name
-:
-hover
 {
 border
 :
@@ -1625,13 +1629,17 @@ solid
 ddd
 ;
 }
+.
+title
+-
+container
+:
+hover
 input
 .
 name
 -
 locked
-:
-hover
 {
 border
 :
@@ -1684,11 +1692,15 @@ color
 transparent
 ;
 }
+.
+title
+-
+container
+:
+hover
 input
 .
 defaultName
-:
-hover
 {
 color
 :
