--- a/layout/style/test/test_unclosed_parentheses.html
+++ b/layout/style/test/test_unclosed_parentheses.html
@@ -1637,6 +1637,74 @@ calc
 ]
 ;
 var
+selectors
+=
+[
+"
+:
+not
+(
+"
+"
+:
+not
+(
+"
+"
+:
+not
+(
+-
+"
+"
+:
+not
+(
+-
+"
+"
+:
+not
+(
+>
+"
+"
+:
+not
+(
+>
+"
+"
+:
+not
+(
+div
+p
+"
+"
+:
+not
+(
+div
+p
+"
+"
+:
+not
+(
+div
+>
+"
+"
+:
+not
+(
+div
+>
+"
+]
+;
+var
 textNode
 =
 document
@@ -1823,6 +1891,182 @@ declaration
 "
 +
 declarations
+[
+i
+]
++
+"
+'
+"
+)
+;
+}
+for
+(
+var
+i
+=
+0
+;
+i
+<
+selectors
+.
+length
+;
++
++
+i
+)
+{
+var
+sheet
+=
+"
+namespace
+html
+url
+(
+http
+:
+/
+/
+www
+.
+w3
+.
+org
+/
+1999
+/
+xhtml
+)
+;
+\
+n
+"
++
+"
+#
+display
+{
+color
+:
+green
+}
+"
++
+selectors
+[
+i
+]
++
+"
+x
+x
+x
+x
+x
+x
+x
+#
+display
+{
+color
+:
+red
+}
+#
+display
+{
+color
+:
+red
+}
+)
+#
+display
+{
+color
+:
+red
+}
+"
++
+"
+#
+display
+{
+z
+-
+index
+:
+"
++
+(
+i
++
+1
+)
++
+"
+}
+"
+;
+textNode
+.
+data
+=
+sheet
+;
+is
+(
+cs
+.
+color
+"
+rgb
+(
+0
+128
+0
+)
+"
+"
+color
+for
+selector
+'
+"
++
+selectors
+[
+i
+]
++
+"
+'
+"
+)
+;
+is
+(
+cs
+.
+zIndex
+i
++
+1
+"
+z
+-
+index
+for
+selector
+'
+"
++
+selectors
 [
 i
 ]
