Bug 587319: We do not know the metrics yet for DWrite fonts. Disable when using DWrite. r=joedrew
UltraBlame original commit: ad71fe3f1827d377961a14c6f69df23f72476a99

--- a/layout/generic/test/test_selection_underline.html
+++ b/layout/generic/test/test_selection_underline.html
@@ -647,6 +647,51 @@ if
 kIsWin
 )
 {
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
+if
+(
+!
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+gfx
+/
+info
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIGfxInfo
+)
+.
+DWriteEnabled
+)
+{
 gFontMetrics
 =
 [
@@ -760,6 +805,7 @@ descentLimit
 }
 ]
 ;
+}
 }
 /
 *
